Fixed and tested CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,7 @@ project(CMakeSFMLProject LANGUAGES CXX)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
 include(FetchContent)
 FetchContent_Declare(SFML
@@ -16,9 +15,14 @@ FetchContent_Declare(SFML
 FetchContent_MakeAvailable(SFML)
 
 add_executable(melody_map gui.cpp)
+
+target_include_directories(melody_map PRIVATE
+    ${SFML_SOURCE_DIR}/include
+    ${SFML_BINARY_DIR}/include
+)
+
 target_link_libraries(melody_map PRIVATE 
         SFML::Graphics
         SFML::Window
         SFML::System
-        stdc++fscd
         )
